--- a/Backend/wwwroot/index.html
+++ b/Backend/wwwroot/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AmericanEagleProject</title>
+    <title>Fuzzy Searcher</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/NavBar.css">
 </head>
+<header>
+    <h1>Fuzzy Searcher</h1>
+    <nav>
+        <ul>
+            <li class="nav-list-item"><a href="./login.html">Login</a></li>
+        </ul>
+    </nav>
+</header>
 <body>
     <div class="fuzzySearch">
         <form action="http://localhost:5273/DbSearch">
@@ -22,6 +31,6 @@
     <h2 class="data-title">User Data</h2>
     <div id="content-container"></div>
 
-    <script src="./js/fetchData.mjs"></script>
+    <script src="./js/fetchDatas.mjs"></script>
 </body>
 </html>
