--- a/Backend/wwwroot/index.html
+++ b/Backend/wwwroot/index.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fuzzy Searcher</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/Roboto.css">
     <link rel="stylesheet" href="./css/NavBar.css">
 </head>
 <header>
-    <h1>Fuzzy Searcher</h1>
+    <h1 class="roboto-bold">Fuzzy Searcher</h1>
     <nav>
         <ul>
-            <li class="nav-list-item"><a href="./login.html">Login</a></li>
+            <li class="nav-list-item roboto-regular"><a href="./login.html">Login</a></li>
         </ul>
     </nav>
 </header>
