Unworking login auth

--- a/Backend/wwwroot/index.html
+++ b/Backend/wwwroot/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/Roboto.css">
     <link rel="stylesheet" href="./css/NavBar.css">
+    <link rel="stylesheet" href="./css/IndexPageStyles.css">
 </head>
 <header>
     <h1 class="roboto-bold">Fuzzy Searcher</h1>
@@ -20,14 +21,11 @@
     </nav>
 </header>
 <body>
-    <div class="fuzzySearch">
+    <div class="fuzzySearch post-header-container">
         <form action="http://localhost:5273/DbSearch">
             <input type="text">
             <input type="submit" value="Search">
         </form>
-        <div class="fuzzySearchResponses">
-
-        </div>
     </div>
 
     <button id="myBtn">Fetch Data</button>
