Create Post Form JS Frontend

--- a/Backend/wwwroot/index.html
+++ b/Backend/wwwroot/index.html
@@ -28,7 +28,7 @@
             <input class="inputText" type="text" placeholder="Search Posts">
             <input class="searchButton" type="button" value="Search">
         </form>
-        <button class="roboto-regular new-post">New Post</button>
+        <button id="create-new-post" class="roboto-regular new-post">New Post</button>
     </div>
 
     <div id="post-ctrn" class="post-container roboto-regular">
@@ -37,6 +37,16 @@
         <div class="loader"></div>
     </div>
     
+    <!-- Mock Data REMOVE LATER -->
+    <!-- <div class="create-post-container">
+        <div class="create-post-header">
+            <p class="create-post-title-text">Create Post</p>
+            <span class="material-symbols-outlined">close</span>
+        </div>
+        <input type="text" name="create-post-title" id="create-post-title">
+        <input type="text" name="create-post-text" id="create-post-text">
+        <button class="create-post-button">Post</button>
+    </div> -->
 
     <script src="./js/fetchUserPosts.mjs"></script>
 </body>
