Frontend visuals for creating a new post

--- a/Backend/wwwroot/index.html
+++ b/Backend/wwwroot/index.html
@@ -23,6 +23,7 @@
     </nav>
 </header>
 <body>
+    <div id="create-new-post-section"></div>
     <div class="fuzzySearch post-header-container">
         <form action="http://localhost:5273/DbSearch">
             <input class="inputText" type="text" placeholder="Search Posts">
@@ -36,17 +37,6 @@
     <div id="loader-ctrn" class="loader-container">
         <div class="loader"></div>
     </div>
-    
-    <!-- Mock Data REMOVE LATER -->
-    <!-- <div class="create-post-container">
-        <div class="create-post-header">
-            <p class="create-post-title-text">Create Post</p>
-            <span class="material-symbols-outlined">close</span>
-        </div>
-        <input type="text" name="create-post-title" id="create-post-title">
-        <input type="text" name="create-post-text" id="create-post-text">
-        <button class="create-post-button">Post</button>
-    </div> -->
 
     <script src="./js/fetchUserPosts.mjs"></script>
 </body>
