Frontend POST request for creating new post

--- a/Backend/wwwroot/index.html
+++ b/Backend/wwwroot/index.html
@@ -40,4 +40,7 @@
 
     <script src="./js/fetchUserPosts.mjs"></script>
 </body>
+<footer>
+    <div>this is the footer section</div>
+</footer>
 </html>
