Filter Post Button Frontend

--- a/Backend/wwwroot/index.html
+++ b/Backend/wwwroot/index.html
@@ -29,6 +29,17 @@
             <input class="inputText" type="text" placeholder="Search Posts">
             <input class="searchButton" type="button" value="Search">
         </form>
+        <div class="dropdown roboto-regular">
+            <button class="dropbtn">
+                <span class="material-symbols-outlined">filter_list</span>
+            </button>
+            <div class="dropdown-content">
+              <button id="" class="filter-button">Asecnding Date</button>
+              <button id="active-dropdown-content" class="filter-button">Decending Date</button>
+              <button id="" class="filter-button">Asecnding Likes</button>
+              <button id="" class="filter-button">Decending Likes</button>
+            </div>
+          </div> 
         <button id="create-new-post" class="roboto-regular new-post">New Post</button>
     </div>
 
