--- a/Backend/wwwroot/index.html
+++ b/Backend/wwwroot/index.html
@@ -33,7 +33,7 @@
             <button class="dropbtn">
                 <span class="material-symbols-outlined">filter_list</span>
             </button>
-            <div class="dropdown-content">
+            <div id="dropdown-content-id" class="dropdown-content">
               <button id="" class="filter-button">Asecnding Date</button>
               <button id="active-dropdown-content" class="filter-button">Decending Date</button>
               <button id="" class="filter-button">Asecnding Likes</button>
