--- a/Backend/wwwroot/index.html
+++ b/Backend/wwwroot/index.html
@@ -34,10 +34,10 @@
                 <span class="material-symbols-outlined">filter_list</span>
             </button>
             <div id="dropdown-content-id" class="dropdown-content">
-              <button id="" class="filter-button">Asecnding Date</button>
-              <button id="active-dropdown-content" class="filter-button">Decending Date</button>
-              <button id="" class="filter-button">Asecnding Likes</button>
-              <button id="" class="filter-button">Decending Likes</button>
+              <button id="" class="filter-button">Newest Post</button>
+              <button id="active-dropdown-content" class="filter-button">Oldest Post</button>
+              <button id="" class="filter-button">Most Likes</button>
+              <button id="" class="filter-button">Least Likes</button>
             </div>
           </div> 
         <button id="create-new-post" class="roboto-regular new-post">New Post</button>
