Return Jwt On Login Post Request

--- a/Backend/wwwroot/login.html
+++ b/Backend/wwwroot/login.html
@@ -36,7 +36,6 @@
             <button>Create account here</button>
         </div>
     </section>
-    <script type="module" src="./js/fetch.mjs"></script>
-    <script type="module" src="./js/events.mjs"></script>
+    <script type="module"  src="./js/logincred.mjs"></script>
 </body>
 </html>
