Profile page under login

--- a/Backend/wwwroot/index.html
+++ b/Backend/wwwroot/index.html
@@ -17,7 +17,7 @@
 <header>
     <h1 class="roboto-bold">Fuzzy Searcher</h1>
     <nav>
-        <ul>
+        <ul id="nav-ul-list">
             <li class="nav-list-item roboto-regular"><a href="./login.html">Login</a></li>
         </ul>
     </nav>
