Basic profile setup and readme

--- a/Backend/wwwroot/profile.html
+++ b/Backend/wwwroot/profile.html
@@ -21,6 +21,18 @@
     </nav>
 </header>
 <body>
-
+    <section id="user-profile-section" class="roboto-regular text-color">
+        <p id="user-first-name">
+            First Name: <span id="user-first-name-span"></span>
+        </p>
+        <p id="user-last-name">
+            Last Name: <span id="user-last-name-span"></span>
+        </p>
+        <p id="user-username">
+            Username: <span id="user-username-span"></span>
+        </p>
+    </section>
+    <section id="user-posts-section" class="roboto-regular"></section>
+<script src="./js/profile.js"></script>
 </body>
 </html>
