User Profile Posts

--- a/Backend/wwwroot/profile.html
+++ b/Backend/wwwroot/profile.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/Roboto.css">
     <link rel="stylesheet" href="./css/NavBar.css">
+    <link rel="stylesheet" href="./css/IndexPageStyles.css">
+    <link rel="stylesheet" href="./css/Loader.css">
 </head>
 <header>
     <h1 class="roboto-bold">Fuzzy Searcher</h1>
@@ -33,6 +35,9 @@
         </p>
     </section>
     <section id="user-posts-section" class="roboto-regular"></section>
-<script src="./js/profile.js"></script>
+    <div id="loader-ctrn" class="loader-container">
+        <div class="loader"></div>
+    </div>
+    <script src="./js/profile.js"></script>
 </body>
 </html>
