--- a/Backend/wwwroot/index.html
+++ b/Backend/wwwroot/index.html
@@ -26,8 +26,8 @@
     <div id="create-new-post-section"></div>
     <div class="fuzzySearch post-header-container">
         <form action="http://localhost:5273/DbSearch">
-            <input class="inputText" type="text" placeholder="Search Posts">
-            <input class="searchButton" type="button" value="Search">
+            <input id="search-post-text-input" class="inputText" type="text" placeholder="Search Posts">
+            <input id="search-post-button" class="searchButton" type="button" value="Search">
         </form>
         <div class="dropdown roboto-regular">
             <button class="dropbtn">
