--- a/Backend/wwwroot/profile.html
+++ b/Backend/wwwroot/profile.html
@@ -47,6 +47,7 @@
             <span id="total-profile-likes-item">0</span>
         </div>
     </section>
+    <div id="delete-post-popup-parent" class="roboto-regular text-color"></div>
     <section id="user-posts-section" class="roboto-regular"></section>
     <div id="loader-ctrn" class="loader-container">
         <div class="loader"></div>
