--- a/Backend/wwwroot/index.html
+++ b/Backend/wwwroot/index.html
@@ -48,8 +48,8 @@
     <div id="loader-ctrn" class="loader-container">
         <div class="loader"></div>
     </div>
-
-    <script src="./js/fetchUserPosts.mjs"></script>
+    <script type="module" src="./js/modules/cookies.js"></script>
+    <script type="module" src="./js/fetchUserPosts.mjs"></script>
 </body>
 <footer>
     <div>this is the footer section</div>
