Host Address Refactor

--- a/Backend/wwwroot/login.html
+++ b/Backend/wwwroot/login.html
@@ -39,6 +39,6 @@
         </div>
     </section>
     <script type="module"  src="./js/logincred.mjs"></script>
-    <script src="./js/createAccount.js"></script>
+    <script type="module" src="./js/createAccount.js"></script>
 </body>
 </html>
