--- a/Backend/wwwroot/profile.html
+++ b/Backend/wwwroot/profile.html
@@ -52,6 +52,8 @@
     <div id="loader-ctrn" class="loader-container">
         <div class="loader"></div>
     </div>
-    <script src="./js/profile.js"></script>
+    <script type="module" src="./js/modules/cookies.js"></script>
+    <script type="module" src="./js/modules/apiCalls.js"></script>
+    <script type="module" src="./js/profile.js"></script>
 </body>
 </html>
